# CSCI-338_Project_3_MVC_Application

./: .gitignore  Dockerfile  README.md  check.sh  compose.yaml  main.py  pyproject.toml
ui/: check.sh  index.html  main.jsx  package-lock.json  package.json  styles.css
